--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -9,17 +9,13 @@
     <%= f.label :name, '名前' %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :title, class:'form-control' %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
   <div class="form-group" >
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class="form-group" >
     <%= f.label :body, '本文' %>
-    <%= f.text_field :title, class: 'form-control', rows: 10 %>
+    <%= f.text_area :body, class: 'form-control', rows: 10 %>
   </div>
     <%= f.submit '保存', class: 'btn btn-primary' %>
   </div>
